Fix display of routines filter on mobile screens

--- a/application/src/main/resources/static/css/main.css
+++ b/application/src/main/resources/static/css/main.css
@@ -695,10 +695,6 @@ video {
   min-height: 100vh;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-20 {
   width: 5rem;
 }
@@ -753,6 +749,10 @@ video {
 
 .grid-cols-8 {
   grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1332,8 +1332,12 @@ video {
     display: block;
   }
 
-  .md\:w-80 {
-    width: 20rem;
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-36 {
+    width: 9rem;
   }
 
   .md\:grid-cols-2 {
@@ -1342,10 +1346,6 @@ video {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
   }
 
   .md\:items-stretch {
@@ -1376,6 +1376,12 @@ video {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:w-1\/2 {
+    width: 50%;
   }
 }
 
